[package]
name = "tide-github"
description = "Easily process Github webhooks using tide"
edition = "2018"
version = "0.2.1"
authors = ["Koen Wilde <koen@parity.io>"]
repository = "https://github.com/paritytech/tide-github"
license = "Apache-2.0"
categories = ["web-programming", "api-bindings"]
keywords = ["tide", "github", "webhooks"]

[dependencies]
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }

thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

octocrab = "0.15"
